// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination itemCount < pageSize 1`] = `
<div>
  <div
    class="horizontal layout-spacing-undefined main container padding padding-top padding-top-medium padding-bottom padding-bottom-medium flex flex-align flex-align-center-center flex-distribution flex-distribution-space-between"
  >
    <span
      class="font main text inline inline-true"
    >
      Showing 
      <strong>
        5
      </strong>
       of 
      <strong>
        5
      </strong>
    </span>
  </div>
</div>
`;

exports[`Pagination pageCount < 8 1`] = `
<div>
  <div
    class="horizontal layout-spacing-undefined main container padding padding-top padding-top-medium padding-bottom padding-bottom-medium flex flex-align flex-align-center-center flex-distribution flex-distribution-space-between"
  >
    <span
      class="font main text inline inline-true"
    >
      Showing 
      <strong>
        1
      </strong>
       -
       
      <strong>
        10
      </strong>
       of 
      <strong>
        30
      </strong>
    </span>
    <div
      class="horizontal layout-spacing-small main spacing spacing-small"
    >
      <button
        class="bp3-button bp3-disabled button font main intent intent-primary with-current-color"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          1
        </span>
      </button>
      <button
        class="bp3-button bp3-minimal button font main intent intent-none with-current-color without-shadow"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          2
        </span>
      </button>
      <button
        class="bp3-button bp3-minimal button font main intent intent-none with-current-color without-shadow"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          3
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Pagination pageCount >= 8 1`] = `
<div>
  <div
    class="horizontal layout-spacing-undefined main container padding padding-top padding-top-medium padding-bottom padding-bottom-medium flex flex-align flex-align-center-center flex-distribution flex-distribution-space-between"
  >
    <span
      class="font main text inline inline-true"
    >
      Showing 
      <strong>
        1
      </strong>
       -
       
      <strong>
        10
      </strong>
       of 
      <strong>
        100
      </strong>
    </span>
    <div
      class="horizontal layout-spacing-small main spacing spacing-small"
    >
      <button
        class="bp3-button bp3-disabled button font main intent intent-primary with-current-color"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          1
        </span>
      </button>
      <button
        class="bp3-button bp3-minimal button font main intent intent-none with-current-color without-shadow"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          2
        </span>
      </button>
      <button
        class="bp3-button bp3-minimal button font main intent intent-none with-current-color without-shadow"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          3
        </span>
      </button>
      <button
        class="bp3-button bp3-minimal button font main intent intent-none with-current-color without-shadow"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          4
        </span>
      </button>
      <button
        class="bp3-button bp3-minimal button font main intent intent-none with-current-color without-shadow"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          5
        </span>
      </button>
      <button
        class="bp3-button bp3-minimal button font main intent intent-none with-current-color without-shadow"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          6
        </span>
      </button>
      <button
        class="bp3-button bp3-minimal button font main intent intent-none with-current-color without-shadow"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          7
        </span>
      </button>
      <button
        class="bp3-button bp3-minimal button font main intent intent-none with-current-color without-shadow"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          8
        </span>
      </button>
      <button
        class="bp3-button bp3-minimal button font main intent intent-none with-current-color without-shadow"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          9
        </span>
      </button>
      <button
        class="bp3-button bp3-minimal button font main intent intent-none with-current-color without-shadow"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          10
        </span>
      </button>
      <button
        class="bp3-button bp3-minimal button font main style style-marginRight style-marginRight-var(--spacing-medium) with-current-color iconOnly without-shadow withLeftIcon"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-chevron-right main padding padding-undefined"
          icon="chevron-right"
        >
          <svg
            data-icon="chevron-right"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              chevron-right
            </desc>
            <path
              d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</div>
`;
